--- a/config/database.yml
+++ b/config/database.yml
@@ -11,14 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: production_wts_dev
+  database: dev_wts
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: production_wts_test
+  database: test_wts
 
 production:
   <<: *default
