--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular-timer": "~1.3.3"
+    "angular": "~1.4.3",
+    "angular-animate": "~1.4.3",
+    "angular-timer": "~1.3.3",
+    "greensock": "~1.18.2"
+  },
+  "resolutions": {
+    "angular": "~1.4.3"
   }
 }
