--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,8 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
+  username: root
+  password: root
 
 development:
   <<: *default
