--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
-  username: zstayman
-  password:
+  username: root
+  password: root
 
 development:
   <<: *default
